--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "cha",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Make task chaining.",
   "main": "./lib/cha.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chajs/cha.git"
+  },
   "scripts": {
     "build": "node ./test/build",
-    "watch": "node ./test/watch",
     "expr": "node ./test/expr",
-    "dev": "node ./test/target --dev",
-    "dist": "node ./test/target --dist",
     "test": "node ./test/build",
     "debug": "node --debug-brk ./test/build"
   },
@@ -19,14 +20,12 @@
     "execution": "~0.0.3",
     "record": "~0.2.0",
     "glob": "*",
-    "nopt": "*",
     "mkdirp": "*",
     "request": "*",
     "coffee-script": "*",
     "uglify-js": "~2.4.12",
-    "gaze": "*",
     "es6-promise": "*"
   },
   "author": "yuanyan",
-  "license": "MIT"
+  "license": "ISC"
 }
