Move extensions documention to each extension.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "node ./test/build",
     "expr": "node ./test/expr",
-    "test": "node ./test/build & node ./test/expr",
+    "test": "node ./test/build && node ./test/expr",
     "debug": "node --debug-brk ./test/build"
   },
   "dependencies": {
